[gd_scene load_steps=5 format=3 uid="uid://d1u74bnb53j5a"]

[ext_resource type="Script" path="res://Scene/menu.gd" id="1_qnob0"]
[ext_resource type="Texture2D" uid="uid://cqfhne1ipw2fm" path="res://UIux/Large Buttons/Large Buttons/Play Button.png" id="2_lffvd"]
[ext_resource type="Texture2D" uid="uid://djqllfmvgn0vw" path="res://UIux/Large Buttons/Large Buttons/Options Button.png" id="3_by0sq"]
[ext_resource type="Texture2D" uid="uid://b2p8ydaxisqyx" path="res://UIux/Large Buttons/Large Buttons/Quit Button.png" id="4_ky605"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6.30794, 5.12758)
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_qnob0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -47.7177
offset_top = -57.3369
offset_right = 560.282
offset_bottom = 574.663
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.158384, 0.186757)

[node name="StartButton" type="Button" parent="VBoxContainer"]
modulate = Color(0.922774, 0.968445, 0.956572, 1)
layout_mode = 2
icon = ExtResource("2_lffvd")

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_by0sq")
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
texture_repeat = 2
layout_mode = 2
icon = ExtResource("4_ky605")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
